LIST OF CHANGES FOR NPG-QC PACKAGE

 - travis ci testing perl modules for npg_qc and npg_qc_viewer

release 59.4
 - saving manual qc values for libraries - allow for an undefined or empty
   list of tag indices
 - tags in lanes from GCLP runs are not subject to library qc
 - composition-based autoqc results - disable version checking between the version
   of the module that serialized the object and the version of the same module that
   is performing de-serialization
 - script to import manual qc values from the old warehouse RT#493757
 - update_outcome method of mqc entities renamed to update_nonfinal_outcome
 - a new update_outcome method allows for update of final outcomes
 - method to toggle stored final manual qc outcomes
 - mqc reporter - reporting might cause a loss of link between the product and
   flowcell data in the ml warehouse, so prepare all data, then report
 - SeqQC
   - New functionality to allow export summary table to CSV

release 59.3
 - transparent search query for autoqc objects irrespectively of the details of
   object's database implementation (in-table identifies or composition)
 - custom parent class for resultset objects
 - calling ->new() on resultset object to create a new result replaced with
   calling more intuitive ->new_result()
 - upgrade genotype check to use samtools1 and bcftools1
 - SeqQC
   - New dictionary table for plex level library MQC. (Issue 238)

release 59.2
 - library-level manual QC for individual plexes.

release 59.1
 - 'write2file' method of autoqc result objects removed since it duplicated
     the 'store' method
 - alternative base class npg_qc::autoqc::results::base for autoqc results objects,
     able to represent results that are derived from merged files and described by
     a composition of multiple components
 - autoqc result objects for samtools stats file, sam/bam headers and digests
     derived from the new base class