@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - autoqc results db loader: an option to build related objects from
+   scratch
  - travis ci testing perl modules for npg_qc and npg_qc_viewer
 
 release 59.4
